Add POSIX isatty() checks for stdin/stdout redirection detection
TerminalBuilder.isSystemTerminal(): add TtyDetect.isStdinTty() check.
When stdin is not a TTY (redirected from file or piped), go directly
to ExternalTerminal without trying (and failing at) system terminal
providers. This follows standard POSIX convention where programs
check isatty(STDIN_FILENO) to decide whether to run interactively.

Previously, redirected stdin caused all SPI providers to be tried
and fail (ExecPty forks 'tty' which returns 'not a tty', FfmPty
calls isatty(0) which returns false), wasting ~8ms on subprocess
calls before falling back to ExternalTerminal. Now the fallback is
immediate.

TerminalConnection: add TtyDetect.isStdoutTty() check for ANSI
output suppression. When stdout is not a TTY (redirected to file
or piped to another program), set ansi=false to prevent ANSI escape
codes from being written to the redirected output. This follows
standard POSIX convention where programs check isatty(STDOUT_FILENO)
to decide whether to emit escape sequences (like ls --color=auto,
grep --color=auto).

TtyDetect.isTty(): reorder detection to try Console.isTerminal()
(Java 22+) before FFM isatty(). Console.isTerminal() does not
require loading LibC or creating FFM downcall handles, avoiding
the JVM restricted method warning when --enable-native-access is
not set. FFM isatty() is only tried as a secondary path when
Console.isTerminal() is not available (pre-Java 22). Remove the
now-unused fallbackIsTty() method.

Fixes #266